Fixed nav when scrolling on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,6 @@
 
  #nav {
   margin: 0;
-  padding: 0;
  }
 
  #nav li {
@@ -45,6 +44,7 @@
   border: 0;
   padding: 0;
   margin: 0px;
+  overflow: hidden;
  }
 
  .menuitem {
